[package]
name = "media_import"
version = "0.3.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
chrono = "0.4.10"
docopt = "1.1.0"
failure = "0.1.6"
failure_derive = "0.1.6"
indicatif = "0.13.0"
mime = "0.3.14"
serde = "1.0.104"
serde_derive = "1.0.103"
serde_json = "1.0.44"
tree_magic = "0.2.1"
walkdir = "2.2.9"
xdg = "2.2.0"
