[package]
name = "media_import"
version = "0.3.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
chrono = "0.4.19"
docopt = "1.1.1"
failure = "0.1.8"
failure_derive = "0.1.6"
indicatif = "0.16.2"
mime = "0.3.16"
serde = "1.0.128"
serde_derive = "1.0.103"
serde_json = "1.0.64"
tree_magic = "0.2.1"
walkdir = "2.3.2"
xdg = "2.2.0"
